[gd_scene load_steps=10 format=2]

[ext_resource path="res://Src/Autoloads/PauseMenuTemporary/MainMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://Src/Autoloads/PauseMenuTemporary/PauseMenuTemporary.gd" type="Script" id=2]
[ext_resource path="res://Src/Autoloads/PauseMenuTemporary/LevelSelectMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://Src/Autoloads/PauseMenuTemporary/SettingsMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://Src/Autoloads/PauseMenuTemporary/ThemeTemporary.tres" type="Theme" id=5]
[ext_resource path="res://Src/Autoloads/PauseMenuTemporary/Blur.gd" type="Script" id=7]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float amount: hint_range(0.0, 5.0);

void fragment() {
	COLOR.rgb = textureLod(SCREEN_TEXTURE, SCREEN_UV, amount).rgb;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/amount = 0.0

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )

[node name="PauseMenuTemporary" type="CanvasLayer"]
pause_mode = 2
layer = 9
script = ExtResource( 2 )

[node name="Blur" type="TextureRect" parent="."]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
expand = true
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="Blur"]

[node name="Tween2" type="Tween" parent="Blur"]

[node name="PauseMenuTemporary" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="PauseMenuTemporary"]
self_modulate = Color( 1, 1, 1, 0.352941 )
margin_left = 460.0
margin_top = 290.0
margin_right = 1460.0
margin_bottom = 790.0
rect_min_size = Vector2( 1000, 500 )
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" parent="PauseMenuTemporary" instance=ExtResource( 1 )]

[node name="SettingsMenu" parent="PauseMenuTemporary" instance=ExtResource( 4 )]
visible = false

[node name="LevelSelectMenu" parent="PauseMenuTemporary" instance=ExtResource( 3 )]
visible = false
[connection signal="toggle_pause" from="PauseMenuTemporary/MainMenu" to="." method="_on_MainMenu_toggle_pause"]
